<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgroundfirst"
        android:backgroundTint="@color/blue"
        android:backgroundTintMode="multiply">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/backgroundsecond"
            android:backgroundTint="@color/blue"
            android:backgroundTintMode="multiply">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/backgroundthird"
                android:backgroundTint="@color/blue"
                android:backgroundTintMode="multiply">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/twolottie"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_marginTop="50dp"
                    app:layout_constraintBottom_toTopOf="@+id/twotv1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/facebook_icon_intro" />

                <TextView
                    android:id="@+id/twotv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/facebook"
                    android:textColor="@color/primary_text"
                    android:textSize="30sp"

                    app:layout_constraintEnd_toEndOf="@+id/twolottie"
                    app:layout_constraintStart_toStartOf="@+id/twolottie"
                    app:layout_constraintTop_toBottomOf="@+id/twolottie" />

                <TextView
                    android:id="@+id/twotv2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/twotv1"
                    android:textColor="@color/primary_text"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/twotv1" />

                <TextView
                    android:id="@+id/twotv3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:text="@string/twotv2"
                    android:textColor="@color/primary_text"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/twotv2" />

                <TextView
                    android:id="@+id/twotv4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginBottom="50dp"
                    android:text="@string/twotv3"
                    android:textColor="@color/secondary_text"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/twotv3" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>